--- a/templates/Admin.html
+++ b/templates/Admin.html
@@ -82,41 +82,41 @@
 			<div class="dws-input2">
 				<a
 					class="dws-submit2"
-					href="/admin/addclient/{{username}}"
+					href="/admin/updateclient/{{username}}"
 					type="Money"
 					name="Money"
 					value="Money"
-					>Добавить клиента</a
+					>Обновить клиента</a
 				>
 			</div>
             <div class="dws-input2">
 				<a
 					class="dws-submit2"
-					href="/admin/addclient/{{username}}"
+					href="/admin/checkproduct/{{username}}"
 					type="Money"
 					name="Money"
 					value="Money"
-					>Добавить клиента</a
+					>Проверить продукцию</a
 				>
 			</div>
             <div class="dws-input2">
 				<a
 					class="dws-submit2"
-					href="/admin/addclient/{{username}}"
+					href="/admin/checkclient/{{username}}"
 					type="Money"
 					name="Money"
 					value="Money"
-					>Добавить клиента</a
+					>Проверить клиента</a
 				>
 			</div>
             <div class="dws-input2">
 				<a
 					class="dws-submit2"
-					href="/admin/addclient/{{username}}"
+					href="/admin/sold_product/{{username}}"
 					type="Money"
 					name="Money"
 					value="Money"
-					>Добавить клиента</a
+					></a
 				>
 			</div>
 		</form>
