--- a/templates/Add_Staff.html
+++ b/templates/Add_Staff.html
@@ -18,25 +18,25 @@
         <input type = "text" name = "surname" placeholder = "Фамилия:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "patronomyc" placeholder = "Отчество:">
-        </div>
-        <div class = "dws-input">
         <input type = "text" name = "telephone" placeholder = "Телефон:">
         </div>
         <div class = "dws-input">
         <input type = "text" name = "position" placeholder = "Должность сотрудника:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "service" placeholder = "Название услуги:">
+        <input type = "text" name = "salary" placeholder = "Зарплата:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "service_type" placeholder = "Название услуги:">
+        <input type = "text" name = "qunatity" placeholder = "Кол-во сделанного товара:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "login" placeholder = "Login:">
+        <input type = "text" name = "subdivision" placeholder = "Номер отделения:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "passw" placeholder = "Passw:">
+        <input type = "text" name = "adres" placeholder = "Адрес:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "adres" placeholder = "Адрес:">
         </div>
         <br />
         <br />
