--- a/templates/Add_Staff.html
+++ b/templates/Add_Staff.html
@@ -27,7 +27,7 @@
         <input type = "text" name = "salary" placeholder = "Зарплата:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "qunatity" placeholder = "Кол-во сделанного товара:">
+        <input type = "text" name = "quantity" placeholder = "Кол-во сделанного товара:">
         </div>
         <div class = "dws-input">
         <input type = "text" name = "subdivision" placeholder = "Номер отделения:">
@@ -36,7 +36,10 @@
         <input type = "text" name = "adres" placeholder = "Адрес:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "adres" placeholder = "Адрес:">
+        <input type = "checkbutton" name = "milk" placeholder = "Молоко:">
+        </div>
+        <div class = "dws-input">
+        <input type = "checkbutton" name = "cheese" placeholder = "Сыр:">
         </div>
         <br />
         <br />
