--- a/templates/city.html
+++ b/templates/city.html
@@ -8,18 +8,18 @@
 {% block title %}Statistics    {% endblock %}
 {% block body %}
     <div class = "intro">
-        <h1>Посмотреть стоимость</h1>
+        <h1>РџСЂРѕСЃРјРѕС‚СЂ РѕС‚РґРµР»РѕРІ РІ СЃРІРѕС‘Рј РіРѕСЂРѕРґРµ</h1>
 <div class = "container">
     <img src = "{{ url_for('static',filename='imgs/Service.jpg') }}">
     <form method="post">
         <div class = "dws-input">
-        <input type = "text" name = "name" placeholder = "Название услуги:">
+        <input type = "text" name = "city" placeholder = "Р“РѕСЂРѕРґ:">
         </div>
-        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">Обновить список услуг</button>
+        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">РћР±РЅРѕРІРёС‚СЊ СЃРїРёСЃРѕРє РѕС‚РґРµР»РѕРІ РІ РіРѕСЂРѕРґРµ</button>
         <br />
         <br />
         <br />
-        <a class = "restore" href = "/client/{{username}}">Назад</a>
+        <a class = "restore" href = "/client/{{username}}">РќР°Р·Р°Рґ</a>
     </form>
 </div>
 </div>    {% endblock %}
