--- a/templates/payments.html
+++ b/templates/payments.html
@@ -8,18 +8,18 @@
 {% block title %}Statistics    {% endblock %}
 {% block body %}
     <div class = "intro">
-        <h1>Посмотреть стоимость</h1>
+        <h1>РџСЂРѕСЃРјРѕС‚СЂ СЃС‚РѕРёРјРѕСЃС‚Рё РѕС‚РґРµР»СЊРЅРѕРіРѕ С‚РѕРІР°СЂР°</h1>
 <div class = "container">
     <img src = "{{ url_for('static',filename='imgs/Service.jpg') }}">
     <form method="post">
         <div class = "dws-input">
-        <input type = "text" name = "name" placeholder = "Название услуги:">
+        <input type = "text" name = "product_name" placeholder = "РќР°РёРјРµРЅРѕРІР°РЅРёРµ С‚РѕРІР°СЂР°:">
         </div>
-        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">Обновить список услуг</button>
+        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">РРЅС„РѕСЂРјР°С†РёСЏ Рѕ СЃС‚РѕРёРјРѕСЃС‚Рё С‚РѕРІР°СЂР°</button>
         <br />
         <br />
         <br />
-        <a class = "restore" href = "/client/{{username}}">Назад</a>
+        <a class = "restore" href = "/client/{{username}}">РќР°Р·Р°Рґ</a>
     </form>
 </div>
 </div>    {% endblock %}
