--- a/templates/updateclient.html
+++ b/templates/updateclient.html
@@ -8,18 +8,21 @@
 {% block title %}Statistics    {% endblock %}
 {% block body %}
     <div class = "intro">
-        <h1>Посмотреть стоимость</h1>
+        <h1>Р РµРґР°РєС‚РёСЂРѕРІР°РЅРёРµ РєР»РёРµРЅС‚Р° РІ Р±Р°Р·Рµ</h1>
 <div class = "container">
     <img src = "{{ url_for('static',filename='imgs/Service.jpg') }}">
     <form method="post">
         <div class = "dws-input">
-        <input type = "text" name = "name" placeholder = "Название услуги:">
+        <input type = "text" name = "name" placeholder = "РРјСЏ РєР»РёРµРЅС‚Р°:">
+        <input type = "text" name = "surname" placeholder = "Р¤Р°РјРёР»РёСЏ РєР»РёРµРЅС‚Р°:">
+        <input type = "text" name = "lastname" placeholder = "РћС‚С‡РµСЃС‚РІРѕ РєР»РёРµРЅС‚Р°:">
+        <input type = "text" name = "num" placeholder = "РџРѕСЂСЏРґРєРѕРІС‹Р№ РЅРѕРјРµСЂ:">
         </div>
-        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">Обновить список услуг</button>
+        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">РћС‚РїСЂР°РІРёС‚СЊ</button>
         <br />
         <br />
         <br />
-        <a class = "restore" href = "/client/{{username}}">Назад</a>
+        <a class = "restore" href = "/client/{{username}}">РќР°Р·Р°Рґ</a>
     </form>
 </div>
 </div>    {% endblock %}
