--- a/templates/sold_product.html
+++ b/templates/sold_product.html
@@ -1,25 +1,46 @@
-{% extends 'basics.html' %}
-
-{% block style %}
-<link rel="stylesheet" href="{{ url_for('static',filename='css/Delete_Service.css') }}">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-{% endblock %}
-{% block title %}Statistics {% endblock %}
-{% block body %}
+{% extends 'basics.html' %} {% block style %}
+<link
+	rel="stylesheet"
+	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+/>
+<link
+	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+	rel="stylesheet"
+/>
+{% endblock %} {% block title %}Statistics {% endblock %} {% block body %}
 <div class="intro">
-    <h1>Просмотр количество произведенной и проданной продукции за период времени</h1>
-    <div class="container">
-        <img src="{{ url_for('static',filename='imgs/Service.jpg') }}">
-        <form method="post">
-            <div class="dws-input">
-                <input type="text" name="date_beg" placeholder="Дата начала периода:">
-                <input type="text" name="date_end" placeholder="Дата окончания периода:">
-            </div>
-            <button class="dws-submit2" type="submit" name="submit" value="Report">Просмотр</button>
-            <br />
-            <br />
-            <br />
-            <a class="restore" href="/client/{{username}}">Назад</a>
-        </form>
-    </div>
-</div> {% endblock %}
+	<h1>
+		Просмотр количество произведенной и проданной продукции за период
+		времени
+	</h1>
+	<div class="container">
+		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
+		<form method="post">
+			<div class="dws-input">
+				<input
+					type="text"
+					name="date_beg"
+					placeholder="Дата начала периода:"
+				/>
+				<input
+					type="text"
+					name="date_end"
+					placeholder="Дата окончания периода:"
+				/>
+			</div>
+			<button
+				class="dws-submit2"
+				type="submit"
+				name="submit"
+				value="Report"
+			>
+				Просмотр
+			</button>
+			<br />
+			<br />
+			<br />
+			<a class="restore" href="/client/{{username}}">Назад</a>
+		</form>
+	</div>
+</div>
+{% endblock %}
