fixed file structure

--- a/templates/Add_Client.html
+++ b/templates/Add_Client.html
@@ -1,7 +1,7 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Add_Client.css') }}"
+	href="{{ url_for('static',filename='css/Delete_Staff2.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -32,6 +32,12 @@
 			</div>
 			<div class="dws-input">
 				<input type="text" name="adress" placeholder="Адрес клиента" />
+			</div>
+            <div class="dws-input">
+				<input type="text" name="login_" placeholder="Логин:" />
+			</div>
+            <div class="dws-input">
+				<input type="text" name="password" placeholder="Пароль:" />
 			</div>
 			<br />
 			<br />
