--- a/templates/Add_Staff.html
+++ b/templates/Add_Staff.html
@@ -1,6 +1,6 @@
 {% extends 'basics.html' %}
     {% block style %}
-    <link rel = "stylesheet" href = "{{ url_for('static',filename='css/Add_Staff.css') }}">
+    <link rel = "stylesheet" href = "{{ url_for('static',filename='css/NewClient.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     {% endblock %}
 {% block title %}
