--- a/templates/deletesubdiv.html
+++ b/templates/deletesubdiv.html
@@ -1,13 +1,14 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
 	rel="stylesheet"
 />
-{% endblock %} {% block title %}Удаление подразделения{% endblock %} {% block body %}
+{% endblock %} {% block title %}Удаление подразделения{% endblock %} {% block
+body %}
 <div class="intro">
 	<h1>Удаление подразделения</h1>
 	<div class="container">
