--- a/templates/payments.html
+++ b/templates/payments.html
@@ -1,25 +1,38 @@
-
-    {% extends 'basics.html' %}
-
-    {% block style %}
-    <link rel = "stylesheet" href = "{{ url_for('static',filename='css/Delete_Service.css') }}">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    {% endblock %}
-{% block title %}Statistics    {% endblock %}
-{% block body %}
-    <div class = "intro">
-        <h1>Просмотр стоимости отдельного товара</h1>
-<div class = "container">
-    <img src = "{{ url_for('static',filename='imgs/Service.jpg') }}">
-    <form method="post">
-        <div class = "dws-input">
-        <input type = "text" name = "product_name" placeholder = "Наименование товара:">
-        </div>
-        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">Информация о стоимости товара</button>
-        <br />
-        <br />
-        <br />
-        <a class = "restore" href = "/client/{{username}}">Назад</a>
-    </form>
+{% extends 'basics.html' %} {% block style %}
+<link
+	rel="stylesheet"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
+/>
+<link
+	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+	rel="stylesheet"
+/>
+{% endblock %} {% block title %}Statistics {% endblock %} {% block body %}
+<div class="intro">
+	<h1>Просмотр стоимости отдельного товара</h1>
+	<div class="container">
+		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
+		<form method="post">
+			<div class="dws-input">
+				<input
+					type="text"
+					name="product_name"
+					placeholder="Наименование товара:"
+				/>
+			</div>
+			<button
+				class="dws-submit2"
+				type="submit"
+				name="submit"
+				value="Report"
+			>
+				Информация о стоимости товара
+			</button>
+			<br />
+			<br />
+			<br />
+			<a class="restore" href="/client/{{username}}">Назад</a>
+		</form>
+	</div>
 </div>
-</div>    {% endblock %}
+{% endblock %}
