--- a/templates/update_staff.html
+++ b/templates/update_staff.html
@@ -1,16 +1,13 @@
-{% extends 'basics.html' %} 
-{% block style %}
+{% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
 	rel="stylesheet"
 />
-{% endblock %} 
-{% block title %}Statistics {% endblock %} 
-{% block body %}
+{% endblock %} {% block title %}Statistics {% endblock %} {% block body %}
 <div class="intro">
 	<h1>Редактирование персонала</h1>
 	<div class="container">
