--- a/templates/updateclient.html
+++ b/templates/updateclient.html
@@ -1,28 +1,45 @@
-
-    {% extends 'basics.html' %}
-
-    {% block style %}
-    <link rel = "stylesheet" href = "{{ url_for('static',filename='css/Delete_Service.css') }}">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    {% endblock %}
-{% block title %}Statistics    {% endblock %}
-{% block body %}
-    <div class = "intro">
-        <h1>Редактирование клиента в базе</h1>
-<div class = "container">
-    <img src = "{{ url_for('static',filename='imgs/Service.jpg') }}">
-    <form method="post">
-        <div class = "dws-input">
-        <input type = "text" name = "name" placeholder = "Имя клиента:">
-        <input type = "text" name = "surname" placeholder = "Фамилия клиента:">
-        <input type = "text" name = "lastname" placeholder = "Отчество клиента:">
-        <input type = "text" name = "num" placeholder = "Порядковый номер:">
-        </div>
-        <button class = "dws-submit2" type = "submit" name = "submit" value = "Report">Отправить</button>
-        <br />
-        <br />
-        <br />
-        <a class = "restore" href = "/client/{{username}}">Назад</a>
-    </form>
+{% extends 'basics.html' %} {% block style %}
+<link
+	rel="stylesheet"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
+/>
+<link
+	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+	rel="stylesheet"
+/>
+{% endblock %} {% block title %}Statistics {% endblock %} {% block body %}
+<div class="intro">
+	<h1>Редактирование клиента в базе</h1>
+	<div class="container">
+		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
+		<form method="post">
+			<div class="dws-input">
+				<input type="text" name="name" placeholder="Имя клиента:" />
+				<input
+					type="text"
+					name="surname"
+					placeholder="Фамилия клиента:"
+				/>
+				<input
+					type="text"
+					name="lastname"
+					placeholder="Отчество клиента:"
+				/>
+				<input type="text" name="num" placeholder="Порядковый номер:" />
+			</div>
+			<button
+				class="dws-submit2"
+				type="submit"
+				name="submit"
+				value="Report"
+			>
+				Отправить
+			</button>
+			<br />
+			<br />
+			<br />
+			<a class="restore" href="/client/{{username}}">Назад</a>
+		</form>
+	</div>
 </div>
-</div>    {% endblock %}
+{% endblock %}
