--- a/templates/staff_activity.html
+++ b/templates/staff_activity.html
@@ -1,7 +1,7 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -15,13 +15,18 @@ body %}
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
 			<div class="dws-input">
-				<input type="text" name="number" placeholder="Номер сотрудника:" />
+				<input
+					type="text"
+					name="number"
+					placeholder="Номер сотрудника:"
+				/>
 			</div>
 			<button
 				class="dws-submit2"
 				type="submit"
 				name="submit"
-				value="Report">
+				value="Report"
+			>
 				Проверить ктивность сотрудника
 			</button>
 			<br />
