--- a/templates/subdiv_activity.html
+++ b/templates/subdiv_activity.html
@@ -1,7 +1,7 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -21,7 +21,8 @@ body %}
 				class="dws-submit2"
 				type="submit"
 				name="submit"
-				value="Report">
+				value="Report"
+			>
 				Активность подразделения
 			</button>
 			<br />
