--- a/templates/updatesalary.html
+++ b/templates/updatesalary.html
@@ -1,29 +1,35 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/Delete_Service.css') }}"
+	href="{{ url_for('static',filename='css/About_Client.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
 	rel="stylesheet"
 />
-{% endblock %} {% block title %}Обновление зарплаты{% endblock %} {% block body %}
+{% endblock %} {% block title %}Обновление зарплаты{% endblock %} {% block body
+%}
 <div class="intro">
 	<h1>Обновление зарплаты</h1>
 	<div class="container">
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
 			<div class="dws-input">
-				<input type="text" name="number" placeholder="номер сотрудника:" />
+				<input
+					type="text"
+					name="number"
+					placeholder="номер сотрудника:"
+				/>
 			</div>
-            <div class="dws-input">
+			<div class="dws-input">
 				<input type="text" name="salary" placeholder="Зарплата:" />
 			</div>
 			<button
 				class="dws-submit2"
 				type="submit"
 				name="submit"
-				value="Report">
+				value="Report"
+			>
 				Обновление зарплаты
 			</button>
 			<br />
