--- a/templates/Registation.html
+++ b/templates/Registation.html
@@ -11,10 +11,12 @@
 <div class="intro">
 	<h1>Вход</h1>
 	<div class="container">
-		<img src="{{ url_for('static',filename='imgs/moya.jpg') }}" />
+
 		<form action="" method="post">
 			<div class="dws-input">
 				<input
+					style="background-color:white;
+							margin-top: 4em"
 					class="reg"
 					type="text"
 					name="username"
