--- a/static/css/Director.css
+++ b/static/css/Director.css
@@ -35,13 +35,11 @@ input[type="name"], input[type="surname"], input[type="patronomyc"], input[type=
 .dws-submit{
     padding: 13px 30px;
     margin: 10px 0 20px 0;
+    margin-top: 4em;
     font-size: 40px;
     color: #fff;
-    background-color: #2ca8c6;
     border: none;
-    border-bottom: 4px solid #6ee9fd;
     cursor: pointer;
-    font-family: 'mr_KindlyJasmineG', cursive;
     text-decoration: none;
 }
 .dws-submit:hover{
@@ -70,14 +68,14 @@ input[type="name"], input[type="surname"], input[type="patronomyc"], input[type=
 }
 .container2{
     width: 450px;
-    height: 600px;
+    height: 1000px;
     background-color: #333;
     position: absolute;
     left: 12px;
     text-align: center;
     box-shadow: 0 -5px 0 blue;
     border-radius: 0 0 10px 10px;
-    margin-top: 165px;
+    margin-top: 190px;
 }
 .container2 img{
     width: 120px;
@@ -148,14 +146,10 @@ h4{
 }
 .dws-submit2{
     padding: 13px 40px;
-    margin: 10px 0 20px 0;
-    font-size: 40px;
+    font-size: 25px;
     color: #fff;
-    background-color: rgb(42, 140, 160);
     border: none;
-    border-bottom: 4px solid #6ee9fd;
     cursor: pointer;
-    font-family: 'mr_KindlyJasmineG', cursive;
     text-decoration: none;
 }
 .dws-submit2:hover{
