--- a/templates/Admin.html
+++ b/templates/Admin.html
@@ -9,47 +9,52 @@
 />
 {% endblock %} {% block title %}Admin{% endblock %} {% block body %}
 <div class="intro">
-	<h1>Админ</h1>
+	<h1>{{dirstaff[1] + ' ' + dirstaff[2]}}</h1>
 </div>
 <div class="intro2">
 	<div class="section_header">
 		<h3 class="section_suptitle">
-			Это ваша персональная страница. Хотите внести какие то изменения?
+			Ваш личный кабинет
 		</h3>
 	</div>
 	<div class="container">
-		<img src="{{ url_for('static',filename='imgs/admin.jpg') }}" />
+		
 		<form>
 			<div class="dws-input">
 				<input
+					style="background-color:white;
+							margin-top: 4em"
 					type="name"
 					disabled
 					name="name"
-					placeholder="{{dirstaff.name_staff}}"
+					placeholder="{{dirstaff[1]}}"
 				/>
 			</div>
 			<div class="dws-input">
 				<input
+					style="background-color:white;"
 					type="surname"
 					disabled
 					name="surname"
-					placeholder="{{dirstaff.surname_staff}}"
+					placeholder="{{dirstaff[2]}}"
 				/>
 			</div>
 			<div class="dws-input">
 				<input
+					style="background-color:white;"
 					type="patronomyc"
 					disabled
 					name="patronomyc"
-					placeholder="{{dirstaff.patronomyc_staff}}"
+					placeholder="{{dirstaff[3]}}"
 				/>
 			</div>
 			<div class="dws-input">
 				<input
+					style="background-color:white;"
 					type="telephone"
 					disabled
 					name="telephone"
-					placeholder="{{dirstaff.mobile_telephone_staff}}"
+					placeholder="{{dirstaff[8]}}"
 				/>
 			</div>
 			<br />
@@ -91,16 +96,6 @@
 			<div class="dws-input2">
 				<a
 					class="dws-submit2"
-					href="/admin/checkproduct/{{username}}"
-					type="Money"
-					name="Money"
-					value="Money"
-					>Проверить продукцию</a
-				>
-			</div>
-			<div class="dws-input2">
-				<a
-					class="dws-submit2"
 					href="/admin/checkclient/{{username}}"
 					type="Money"
 					name="Money"
@@ -115,7 +110,17 @@
 					type="Money"
 					name="Money"
 					value="Money"
-				></a>
+				>Проданный продукт</a>
+			</div>
+			<div class="dws-input2">
+				<a
+					class="dws-submit2"
+					href="/admin/checkproduct/{{username}}"
+					type="Money"
+					name="Money"
+					value="Money"
+					>Проверить продукцию</a
+				>
 			</div>
 		</form>
 	</div>
