--- a/templates/sold_product.html
+++ b/templates/sold_product.html
@@ -39,7 +39,7 @@
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/admin/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
