--- a/templates/staff_activity.html
+++ b/templates/staff_activity.html
@@ -27,12 +27,12 @@ body %}
 				name="submit"
 				value="Report"
 			>
-				Проверить ктивность сотрудника
+				Проверить активность сотрудника
 			</button>
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
