--- a/templates/spent_products.html
+++ b/templates/spent_products.html
@@ -34,7 +34,7 @@
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
