--- a/templates/updateclient.html
+++ b/templates/updateclient.html
@@ -38,7 +38,7 @@
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/admin/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
