--- a/templates/updatesalary.html
+++ b/templates/updatesalary.html
@@ -35,7 +35,7 @@
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
