--- a/templates/subdiv_activity.html
+++ b/templates/subdiv_activity.html
@@ -28,7 +28,7 @@ body %}
 			<br />
 			<br />
 			<br />
-			<a class="restore" href="/client/{{username}}">Назад</a>
+			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
 </div>
