--- a/templates/Registation.html
+++ b/templates/Registation.html
@@ -46,7 +46,7 @@
 			<br />
 			<br />
 
-			<a class="restore" href="/logout">Назад</a>
+			<a class="restore" href="/">Назад</a>
 		</form>
 	</div>
 </div>
