--- a/templates/updateclient.html
+++ b/templates/updateclient.html
@@ -22,10 +22,10 @@
 				/>
 				<input
 					type="text"
-					name="lastname"
-					placeholder="Отчество клиента:"
+					name="phone"
+					placeholder="Телефон:"
 				/>
-				<input type="text" name="num" placeholder="Порядковый номер:" />
+				<input type="text" name="adres" placeholder="Адрес:" />
 			</div>
 			<button
 				class="dws-submit2"
