--- a/templates/Director.html
+++ b/templates/Director.html
@@ -94,7 +94,16 @@
 					>Удалить сотрудника</a
 				>
 			</div>
-			
+			<div class="dws-input3">
+				<a
+					class="dws-submit2"
+					href="/director/addstaff_result/{{username}}"
+					type="Hiring staff"
+					name="Hiring staff"
+					value="Check staff"
+					>Просмотреть сотрудника</a
+				>
+			</div>
 			<div class="dws-input5">
 				<a
 					class="dws-submit2"
