--- a/templates/city.html
+++ b/templates/city.html
@@ -30,5 +30,21 @@
 			<a class="restore" href="/client/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер отделения</th>
+			<th class="text">Адрес отделения</th>
+			<th class="text">ФИО шефа</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
