--- a/templates/Add_Staff.html
+++ b/templates/Add_Staff.html
@@ -8,7 +8,7 @@
 {% block body %}
     <div class = "intro">
         <h1>Добавить сотрудника</h1>
-<div class = "container" style="height: 1000px;">
+<div class = "container" style="height: 1200px;">
     <img src = "{{ url_for('static',filename='imgs/Add_Staff.jpg') }}">
     <form method = "post">
         <div class = "dws-input">
@@ -21,7 +21,7 @@
         <input type = "text" name = "telephone" placeholder = "Телефон:">
         </div>
         <div class = "dws-input">
-        <input type = "text" name = "position" placeholder = "Должность сотрудника:">
+        <input type = "text" name = "work_role" placeholder = "Должность сотрудника:">
         </div>
         <div class = "dws-input">
         <input type = "text" name = "salary" placeholder = "Зарплата:">
@@ -35,7 +35,15 @@
         <div class = "dws-input">
         <input type = "text" name = "adres" placeholder = "Адрес:">
         </div>
-      
+        <div class = "dws-input">
+        <input type = "text" name = "position" placeholder = "Должность:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "login" placeholder = "Логин:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "password" placeholder = "Пароль:">
+        </div>
         <br />
         <br />
         <button class = "dws-submit2" style="color:rgb(0,0,0);"  type = "submit" name = "submit" value = "Report">Добавить сотрудника</button>
