--- a/templates/Add_Staff2.html
+++ b/templates/Add_Staff2.html
@@ -11,35 +11,33 @@
 <h1>Список сотрудников</h1>
 <table class="table" border="2">
 	<tr>
+		<th class="text">Номер сотрудников</th>
 		<th class="text">Имя сотрудников</th>
 		<th class="text">Фамилия сотрудников</th>
-		<th class="text">Отчество сотрудников</th>
 		<th class="text">Телефон сотрудников</th>
-
-		<th class="text">Услуги сотрудников</th>
-		<th class="text">Тип услуги</th>
 		<th class="text">Должность сотрудников</th>
+		<th class="text">Зарплата сотрудников</th>
+		<th class="text">Объем сделанный сотружниками</th>
+		<th class="text">Номер отделения сотрудников</th>
+		<th class="text">Адрес сотрудников</th>
+
 	</tr>
 	{% for row in data %}
 	<tr>
 		<th class="text">{{row[0]}}</th>
-		<th class="text">{{row[1]}}</th>
 		<th class="text">{{row[2]}}</th>
+		<th class="text">{{row[1]}}</th>
 		<th class="text">{{row[3]}}</th>
-		<th class="text">{{"\n".join(row[4])}}</th>
-		<th class="text">{{"\n".join(row[5])}}</th>
+		<th class="text">{{row[4]}}</th>
+		<th class="text">{{row[5]}}</th>
 		<th class="text">{{row[6]}}</th>
+		<th class="text">{{row[7]}}</th>
+		<th class="text">{{row[8]}}</th>
 	</tr>
 	{% endfor %}
 </table>
 <br />
 <br />
 <a class="restore" href="/director/{{username}}">Назад</a>
-<!--<button class = "dws-submit3" alt = "" type = "submit">Расписание на следующую неделю</button>-->
-<!--<a class = "dws-submit2" href = "file:///C:/Users/Owner/Desktop/Курсовая%20Малахов/Training.html" type = "Money" name = "Money" value = "Money">Training</a>
-                                                     </div>
-                                                     <div class = "dws-input3">
-                                                     <a class = "dws-submit2" href = "file:///C:/Users/Owner/Desktop/Курсовая%20Малахов/Workshift.html" type = "Hiring staff" name = "Hiring staff" value = "Hiring staff">Workshift</a>
-                                                     </div>-->
 
 {% endblock %}
