--- a/templates/checkclient.html
+++ b/templates/checkclient.html
@@ -14,11 +14,6 @@
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
 			<div class="dws-input">
-				<input
-					type="text"
-					name="client_num"
-					placeholder="Номер клиента:"
-				/>
 				<input type="text" name="client_name" placeholder="Имя:" />
 				<input type="text" name="client_sur" placeholder="Фамилия:" />
 			</div>
@@ -36,5 +31,27 @@
 			<a class="restore" href="/admin/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер клиента</th>
+			<th class="text">Имя клиента</th>
+			<th class="text">Фамилия клиента</th>
+			<th class="text">Адрес клиента</th>
+			<th class="text">Название продукции</th>
+			<th class="text">Тип продукции</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+			<th class="text">{{row[3]}}</th>
+			<th class="text">{{row[4]}}</th>
+			<th class="text">{{row[5]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
