--- a/templates/checkproduct.html
+++ b/templates/checkproduct.html
@@ -34,5 +34,25 @@
 			<a class="restore" href="/admin/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер товара</th>
+			<th class="text">Название товара</th>
+			<th class="text">Тип продукции</th>
+			<th class="text">Номер отделения</th>
+			<th class="text">Цена продукции</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+			<th class="text">{{row[3]}}</th>
+			<th class="text">{{row[4]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
