--- a/templates/cost.html
+++ b/templates/cost.html
@@ -14,7 +14,7 @@
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
 			<div class="dws-input">
-				<input type="text" name="name" placeholder="Название товара:" />
+				<input type="text" name="product_name" placeholder="Название товара:" />
 			</div>
 			<button
 				class="dws-submit2"
@@ -30,5 +30,19 @@
 			<a class="restore" href="/client/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Цена товара</th>
+			<th class="text">Колличество продукции</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
