--- a/templates/farm_main.html
+++ b/templates/farm_main.html
@@ -1,7 +1,7 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/FitnessClubSite.css') }}"
+	href="{{ url_for('static',filename='css/Farm.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
