--- a/templates/payments.html
+++ b/templates/payments.html
@@ -16,8 +16,15 @@
 			<div class="dws-input">
 				<input
 					type="text"
-					name="product_name"
-					placeholder="Наименование товара:"
+					name="first_date"
+					placeholder="Дата начала:"
+				/>
+			</div>
+			<div class="dws-input">
+				<input
+					type="text"
+					name="last_date"
+					placeholder="Дата окончания:"
 				/>
 			</div>
 			<button
@@ -26,7 +33,7 @@
 				name="submit"
 				value="Report"
 			>
-				Информация о стоимости товара
+				Информация о покупках
 			</button>
 			<br />
 			<br />
@@ -34,5 +41,27 @@
 			<a class="restore" href="/client/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер товара</th>
+			<th class="text">Название товара</th>
+			<th class="text">Тип товара</th>
+			<th class="text">Номер отделения</th>
+			<th class="text">Цена товара</th>
+			<th class="text">Колличество продукции</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+			<th class="text">{{row[3]}}</th>
+			<th class="text">{{row[4]}}</th>
+			<th class="text">{{row[5]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
