--- a/templates/spent_products.html
+++ b/templates/spent_products.html
@@ -37,5 +37,29 @@
 			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер товара</th>
+			<th class="text">Название товара</th>
+			<th class="text">Тип товара</th>
+			<th class="text">Номер отделения</th>
+			<th class="text">Цена товара</th>
+			<th class="text">Колличество продукции</th>
+			<th class="text">Колличество проданного</th>
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+			<th class="text">{{row[3]}}</th>
+			<th class="text">{{row[4]}}</th>
+			<th class="text">{{row[5]}}</th>
+			<th class="text">{{row[6]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
