--- a/templates/staff_activity.html
+++ b/templates/staff_activity.html
@@ -35,5 +35,24 @@ body %}
 			<a class="restore" href="/director/{{username}}">Назад</a>
 		</form>
 	</div>
+	{% if data %}
+	<table class="table" border="2">
+		<tr>
+			<th class="text">Номер отделения</th>
+			<th class="text">ФИО сотрудника</th>
+			<th class="text">ФИО начальника</th>
+			<th class="text">Колличество продукции</th>
+
+		</tr>
+		{% for row in data %}
+		<tr>
+			<th class="text">{{row[0]}}</th>
+			<th class="text">{{row[1]}}</th>
+			<th class="text">{{row[2]}}</th>
+			<th class="text">{{row[3]}}</th>
+		</tr>
+		{% endfor %}
+	</table>
+	{% endif %}
 </div>
 {% endblock %}
