--- a/templates/update_staff.html
+++ b/templates/update_staff.html
@@ -1,7 +1,7 @@
 {% extends 'basics.html' %} {% block style %}
 <link
 	rel="stylesheet"
-	href="{{ url_for('static',filename='css/About_Client.css') }}"
+	href="{{ url_for('static',filename='css/NewClient.css') }}"
 />
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
@@ -10,7 +10,7 @@
 {% endblock %} {% block title %}Statistics {% endblock %} {% block body %}
 <div class="intro">
 	<h1>Редактирование персонала</h1>
-	<div class="container" style="height: 1050px;">
+	<div class="container" style="height: 1300px;">
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
 			<div class="dws-input">
@@ -20,42 +20,39 @@
 					placeholder="Номер сотрудника:"
 				/>
 			</div>
-			<div class="dws-input">
-				<input type="text" name="name_login" placeholder="Имя:" />
-			</div>
-			<div class="dws-input">
-				<input type="text" name="surname" placeholder="Фамилия:" />
-			</div>
-			<div class="dws-input">
-				<input type="text" name="telephone" placeholder="Телефон:" />
-			</div>
-			<div class="dws-input">
-				<input
-					type="text"
-					name="position"
-					placeholder="Должность сотрудника:"
-				/>
-			</div>
-			<div class="dws-input">
-				<input type="text" name="salary" placeholder="Зарплата:" />
-			</div>
-			<div class="dws-input">
-				<input
-					type="text"
-					name="quantity"
-					placeholder="Кол-во сделанного товара:"
-				/>
-			</div>
-			<div class="dws-input">
-				<input
-					type="text"
-					name="subdivision"
-					placeholder="Номер отделения:"
-				/>
-			</div>
-			<div class="dws-input">
-				<input type="text" name="adres" placeholder="Адрес:" />
-			</div>
+			<div class = "dws-input">
+        <input type = "text" name = "name_login" placeholder = "Имя:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "surname" placeholder = "Фамилия:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "telephone" placeholder = "Телефон:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "work_role" placeholder = "Должность сотрудника:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "salary" placeholder = "Зарплата:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "quantity" placeholder = "Кол-во сделанного товара:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "subdivision" placeholder = "Номер отделения:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "adres" placeholder = "Адрес:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "position" placeholder = "Должность:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "login" placeholder = "Логин:">
+        </div>
+        <div class = "dws-input">
+        <input type = "text" name = "password" placeholder = "Пароль:">
+        </div>
 			<br />
 			<br />
 			<button
