--- a/templates/Admin.html
+++ b/templates/Admin.html
@@ -106,6 +106,26 @@
 			<div class="dws-input2">
 				<a
 					class="dws-submit2"
+					href="/admin/check_resources/{{username}}"
+					type="Money"
+					name="Money"
+					value="Money"
+					>Проверить ресуры</a
+				>
+			</div>
+			<div class="dws-input2">
+				<a
+					class="dws-submit2"
+					href="/admin/order_resource/{{username}}"
+					type="Money"
+					name="Money"
+					value="Money"
+					>Добавить ресуры</a
+				>
+			</div>
+			<div class="dws-input2">
+				<a
+					class="dws-submit2"
 					href="/admin/sold_product/{{username}}"
 					type="Money"
 					name="Money"
