--- a/templates/Client.html
+++ b/templates/Client.html
@@ -74,7 +74,17 @@
 					>История покупок</a
 				>
 			</div>
-            <div class="dws-input2">
+			 <div class="dws-input2">
+				<a
+					class="dws-submit2"
+					href="/client/add_order/{{username}}"
+					type="Money"
+					name="Money"
+					value="Hiring staff"
+					>Сделать заказ</a
+				>
+			</div>
+		    <div class="dws-input2">
 				<a
 					class="dws-submit2"
 					href="/client/check_places/{{username}}"
