--- a/templates/checkproduct.html
+++ b/templates/checkproduct.html
@@ -7,9 +7,9 @@
 	href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
 	rel="stylesheet"
 />
-{% endblock %} {% block title %}Просмотр количества товара{% endblock %} {% block body %}
+{% endblock %} {% block title %}Проверить продукцию{% endblock %} {% block body %}
 <div class="intro">
-	<h1>Просмотр количества товара</h1>
+	<h1>Проверить продукцию</h1>
 	<div class="container">
 		<img src="{{ url_for('static',filename='imgs/Service.jpg') }}" />
 		<form method="post">
